--- a/staticbase/css/style.css
+++ b/staticbase/css/style.css
@@ -1,7 +1,7 @@
 html {
     background-color: #FFB873; 
-    
 }
+
 @keyframes ani {
     0% {
         opacity: 0;
@@ -11,17 +11,79 @@ html {
         opacity: 1;
     }
 }
+@keyframes blur {
+    0% {
+        filter: blur(0px);
+    }
+
+    100% {
+        filter: blur(10px);
+    }
+}
+@keyframes blur-none {
+    0% {
+        filter: blur(10px);
+    }
+
+    100% {
+        filter: blur(0px);
+    }
+}
+@keyframes ani-none {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        pointer-events: none;
+        display: none;
+    }
+}
+/*
+@keyframes strike {
+    100% {
+        width: 100%;
+    }
+}
+
+.strikethrough-article, .strikethrough-body {
+    position: relative;
+    overflow: hidden;
+}
+.strikethrough-article::after, .strikethrough-body::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 0;
+    top: 59%;
+    height: 2px;
+    background: white;
+    animation: strike 2s forwards;
+}
+.strikethrough-body::after {
+    height: 1px;
+    animation: strike 2s forwards;
+}*/
+
+
+.nav>a{
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
 .nav {
     position: fixed;
     top: 0;
     left: 0;
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     justify-content: space-around;
     align-items: center;
-    height: 50px;
+    min-height: 50px;
     background-color: #FF7F00;
+    z-index: 999;
     
 }
 
@@ -31,6 +93,9 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.all-notes>div{
+    width: 80%;
 }
 .article-done{
     opacity: 0.6;
@@ -42,7 +107,6 @@ html {
 }
 
 .notes, .notes-done{
-    width: 1500px;
     display: flex;
     align-items: center;
     justify-content: space-between ;
@@ -52,6 +116,19 @@ html {
     padding: 15px;
     color: white;
     background-color: #A65200;
+    @media (max-width: 578px) {
+        padding: 10px;
+        display: block;
+
+}
+}
+.notes-text{
+    width: 80%;
+    word-wrap: break-word;
+    @media (max-width: 1200px) {
+        width: 60%;
+
+}
 }
 
 .notes-done{
@@ -119,7 +196,6 @@ html {
 }
 
 #delete:hover {
-    font-size: 18px;
     background-color: #BF8F30;
 }
 
@@ -149,7 +225,7 @@ nav > a:focus:after {
 }
 
 #category{
-    width: 1500px;
+    width: 100%;
     display: flex;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     justify-content: center;
@@ -157,16 +233,16 @@ nav > a:focus:after {
     font-size: 25px;
 }
 #text-no-notes{
-    width: 1500px;
+    width: 100%;
     display: flex;
     justify-content: center;
     color: white;
     font-size: 55px;
 }
 #form-create-notes{
-    height: 100%;
+    pointer-events: none;
+    display: none;
     width: 100%;
-    display: flex;
     color: white;
     justify-content: center;
     align-items: center;
@@ -175,9 +251,7 @@ nav > a:focus:after {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    animation: ani 1s forwards;
 }
 
 #form-create-notes > form{
