--- a/templates/Notes/index_notes.html
+++ b/templates/Notes/index_notes.html
@@ -6,7 +6,7 @@
     <div>
         {% if not Category == None %}
         <div id="category">
-            <h1>Категория: {{ Category }}</h1>
+            <h1>Категория Wow: {{ Category }}</h1>
         </div>
         {% endif %}
         {% if all_notes %}
